syntax = "proto3";

import "common.proto";

option java_package = "electionguard.protogen";
option java_outer_classname = "PlaintextTallyProto";

// Decrypted Tally of some collection of ballots.
message PlaintextTally {
  string tally_id = 1;
  repeated PlaintextTallyContest contests = 2;
}

message PlaintextTallyContest {
  string contest_id = 1; // matches ContestDescription.contest_id
  repeated PlaintextTallySelection selections = 2;
}

message PlaintextTallySelection {
  string selection_id = 1; // matches SelectionDescription.contest_id
  uint32 tally = 2;
  ElementModP value = 3; // // g^tally or M in the spec.
  ElGamalCiphertext message = 4;
  repeated CiphertextDecryptionSelection shares = 5;
}

// A Guardian's Partial Decryption of a selection
message CiphertextDecryptionSelection {
  // The Available Guardian that this share belongs to
  string guardian_id = 1;

  // The Share of the decryption of a selection. `M_i` in the spec.
  ElementModP share = 2;

  // The Proof that the share was decrypted correctly
  oneof proof_or_parts {
    ChaumPedersenProof proof = 3; // When the guardian generates the share directly
    RecoveredParts recovered_parts = 4; // When the share is generated on behalf of this guardian by other guardians
  }
}

message RecoveredParts {
  repeated CiphertextCompensatedDecryptionSelection fragments = 1;
}

message CiphertextCompensatedDecryptionSelection {
  // The Available Guardian that this share belongs to.
  string guardian_id = 1;

  // The Missing Guardian for whom this share is calculated on behalf of.
  string missing_guardian_id = 2;

  // The Share of the decryption of a selection. M_il in the spec.
  ElementModP share = 3;

  // The Recovery Public Key for the missing_guardian that corresponds to the available guardian's share of the secret.
  ElementModP recovery_key = 4;

  // The Proof that the share was decrypted correctly.
  ChaumPedersenProof proof = 5;
}